CloudFormation-Day-6/output/Componentization/security-groups/security-groups.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: this template provisions the webserver and database SG
Metadata: {}

Parameters: 
# webserver parameter
  DevWebserverSGGN:
    Description: please provide your devwebserver group name
    Type: String
    Default: DevWebserverSGGN
  DevWebserverGD:
    Description: please provide your webserver group description
    Type: String
    Default: enabling ssh and http
# database parameter
  DevDBserverSGGN:
    Description: please provide your devDBserver group name
    Type: String
    Default: DevDBserverSGGN
  DevDBserverGD:
    Description: please provide your DBserver group description
    Type: String
    Default: enabling mysql

Mappings: {}

Conditions: {}

Resources: 
# webserver security-group
  DevWebserverSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref DevWebserverSGGN 
      GroupDescription: !Ref DevWebserverGD
      VpcId: !ImportValue DevVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: DevWebserverSG
#database security-group
  DevDBserverSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref DevDBserverSGGN 
      GroupDescription: !Ref DevDBserverGD
      VpcId: !ImportValue DevVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0 
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: DevDBserverSG

Outputs: 
  DevWebserverSGIDExportOutput:
    Description: Exporting dev webserver exort ID
    Value: !Ref DevWebserverSG
    Export: 
      Name: DevWebserverSGID
